Fix cut images on mobile

--- a/src/stylesheets/layouts/_menu.scss
+++ b/src/stylesheets/layouts/_menu.scss
@@ -32,7 +32,7 @@
       position: absolute;
       left: 50%;
       text-decoration: none;
-      transition: all 0.23s;
+      transition: all 100ms;
       background-color: #ece3d4;
     }
 
