--- a/src/stylesheets/stations/_start.scss
+++ b/src/stylesheets/stations/_start.scss
@@ -153,3 +153,28 @@
     background-image: url(../images/start-screen/cards/10.png);
   }
 }
+
+@media (max-width: $mobile-breakpoint) {
+  .start-scene {
+    &-photo-1 {
+      background-color: rgba(255, 0, 0, 0.5);
+      width: em(400px);
+      height: em(435px);
+      margin-left: em(-200px);
+      margin-top: em(-120px);
+
+      h2 {
+        margin-bottom: em(20px, 22px);
+      }
+
+      .arrow-down {
+        animation-name: arrowDown2;
+
+        @keyframes arrowDown2 {
+          0% { bottom: em(-180px); }
+          100% { bottom: em(-195px); }
+        }
+      }
+    }
+  }
+}
