--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -70,3 +70,28 @@ div.clouds {
   bottom: 0;
   // background: rgba(0, 0, 255, 0.5);
 }
+
+// fix jump layout on mobile
+@media (max-width: $mobile-breakpoint) {
+  .station {
+    padding-left: 150vw;
+    padding-right: 150vw;
+    // background-color: rgba(255, 0, 0, 0.25);
+  }
+
+  .station.station-3,
+  .station.station-8 {
+    padding-left: 300vw;
+    padding-right: 300vw;
+  }
+
+  .road {
+    padding-left: 200vw;
+    padding-right: 200vw;
+    // background-color: rgba(0, 255, 0, 0.25);
+  }
+
+  .train {
+    right: 120vw;
+  }
+}
